compiler/testData/diagnostics/tests/enum/enumMissedComma.kt
<!ENUM_USES_DEPRECATED_DELIMITERS!>enum class MyEnum<!> {
    A, B, C D, E F
}